# ics-data-collect-script

./: .gitignore  README.md  collector.py  demo.ipynb  probe_sys_stats.py  probe_user_input.py  pyproject.toml
data/: KBD.csv  M_CLK.csv  M_MOVE.csv  M_SCR.csv  attack_log.txt
