[tool.poetry]
name = "ics-data-collect-script"
version = "0.1.0"
description = ""
authors = ["4piu <16668056@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"
psutil = "^5.9.4"
flatdict = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
